# My-C-Compiler

./: CMakeLists.txt  Parser.cpp  Parser.h  README.md  SymbolTable.h  main.cpp  scanner.l  tab_keywords_flex.h
C_code_examples/: merge.c  mergedouble.c  recursion.c  sort.c
test C programs/: erasthothenes.c  gcd_gcf.c  simplemath.c
